--- a/일정2.html
+++ b/일정2.html
@@ -1,23 +1,23 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> 
 <html>
 	<head>
-		<title>µµ¹Ì³×ÀÌ¼ÇÁî ÀÏÁ¤ 2</title>
+		<title>ë„ë¯¸ë„¤ì´ì…˜ì¦ˆ ì¼ì • 2</title>
 		<script type="text/javascript" src="jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="dominations.js"></script>
 		<script>
 			function setTask11() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î1";
-				taskMap.title = "1-1. ±¹¹Î (4¸í)";
+				var type = "êµ­ë¯¼1";
+				taskMap.title = "1-1. êµ­ë¯¼ (4ëª…)";
 				taskMap.startDate = "2019-12-01 23:47:00";
-				taskList.push(new Array(type, "ºÎµÎ    ", "Lv.10", " 910¸¸ °ñµå", 11,  0 )); // 11ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.12", " 126¸¸ °ñµå",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.12", " 126¸¸ °ñµå",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.13", " 180¸¸ °ñµå",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.13", " 180¸¸ °ñµå",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.14", " 252¸¸ °ñµå",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.14", " 252¸¸ °ñµå",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ë¶€ë‘    ", "Lv.10", " 910ë§Œ ê³¨ë“œ", 11,  0 )); // 11ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.12", " 126ë§Œ ê³¨ë“œ",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.12", " 126ë§Œ ê³¨ë“œ",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.13", " 180ë§Œ ê³¨ë“œ",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.13", " 180ë§Œ ê³¨ë“œ",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.14", " 252ë§Œ ê³¨ë“œ",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.14", " 252ë§Œ ê³¨ë“œ",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -25,17 +25,17 @@
 			function setTask12() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î2";
-				taskMap.title = "1-2. ±¹¹Î (4¸í)";
+				var type = "êµ­ë¯¼2";
+				taskMap.title = "1-2. êµ­ë¯¼ (4ëª…)";
 				taskMap.startDate = "2019-11-27 19:22:00";
-				taskList.push(new Array(type, "Áö·Ú³×°³", "Lv.14", "2360¸¸ °ñµå", 13,  0 )); // 13ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "¹ÂÁö¾ö  ", "Lv. 6", " 650¸¸ ½Ä·®",  7,  0 )); //  7ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.12", " 126¸¸ °ñµå",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.12", " 126¸¸ °ñµå",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.13", " 180¸¸ °ñµå",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.13", " 180¸¸ °ñµå",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.14", " 252¸¸ °ñµå",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "³óÀåµÎ°³", "Lv.14", " 252¸¸ °ñµå",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ì§€ë¢°ë„¤ê°œ", "Lv.14", "2360ë§Œ ê³¨ë“œ", 13,  0 )); // 13ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ë®¤ì§€ì—„  ", "Lv. 6", " 650ë§Œ ì‹ëŸ‰",  7,  0 )); //  7ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.12", " 126ë§Œ ê³¨ë“œ",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.12", " 126ë§Œ ê³¨ë“œ",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.13", " 180ë§Œ ê³¨ë“œ",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.13", " 180ë§Œ ê³¨ë“œ",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.14", " 252ë§Œ ê³¨ë“œ",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ë†ì¥ë‘ê°œ", "Lv.14", " 252ë§Œ ê³¨ë“œ",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -43,18 +43,18 @@
 			function setTask13() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î3";
-				taskMap.title = "1-3. ±¹¹Î (2¸í)";
+				var type = "êµ­ë¯¼3";
+				taskMap.title = "1-3. êµ­ë¯¼ (2ëª…)";
 				taskMap.startDate = "2019-12-07 10:50:00";
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.11", "  36¸¸ ½Ä·®",  3,  0 )); //  3ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.11", "  36¸¸ ½Ä·®",  3,  0 )); //  3ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.11", "  36¸¸ ½Ä·®",  3,  0 )); //  3ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.11", "  36ë§Œ ì‹ëŸ‰",  3,  0 )); //  3ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.11", "  36ë§Œ ì‹ëŸ‰",  3,  0 )); //  3ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.11", "  36ë§Œ ì‹ëŸ‰",  3,  0 )); //  3ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -62,16 +62,16 @@
 			function setTask14() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î4";
-				taskMap.title = "1-4. ±¹¹Î (2¸í)";
+				var type = "êµ­ë¯¼4";
+				taskMap.title = "1-4. êµ­ë¯¼ (2ëª…)";
 				taskMap.startDate = "2019-12-01 23:17:00";
-				taskList.push(new Array(type, "Áö·ÚµÎ°³", "Lv.14", "1180¸¸ °ñµå", 13,  0 )); // 13ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ì§€ë¢°ë‘ê°œ", "Lv.14", "1180ë§Œ ê³¨ë“œ", 13,  0 )); // 13ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -79,16 +79,16 @@
 			function setTask15() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î5";
-				taskMap.title = "1-5. ±¹¹Î (2¸í)";
+				var type = "êµ­ë¯¼5";
+				taskMap.title = "1-5. êµ­ë¯¼ (2ëª…)";
 				taskMap.startDate = "2019-12-02 12:28:00";
-				taskList.push(new Array(type, "¸Åº¹µÎ°³", "Lv. 9", " 800¸¸ °ñµå", 11,  0 ));
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ë§¤ë³µë‘ê°œ", "Lv. 9", " 800ë§Œ ê³¨ë“œ", 11,  0 ));
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -96,17 +96,17 @@
 			function setTask16() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î6";
-				taskMap.title = "1-6. ±¹¹Î (2¸í)";
+				var type = "êµ­ë¯¼6";
+				taskMap.title = "1-6. êµ­ë¯¼ (2ëª…)";
 				taskMap.startDate = "2019-11-28 10:22:00";
-				taskList.push(new Array(type, "¸Åº¹µÎ°³", "Lv. 9", " 800¸¸ °ñµå", 11,  0 )); // 11ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.11", "  36¸¸ ½Ä·®",  3,  0 )); //  3ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.12", "  63¸¸ ½Ä·®",  4,  0 )); //  4ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.13", "  90¸¸ ½Ä·®",  5,  0 )); //  5ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
-				taskList.push(new Array(type, "Ä³·¯¹ê  ", "Lv.14", " 126¸¸ ½Ä·®",  6,  0 )); //  6ÀÏ
+				taskList.push(new Array(type, "ë§¤ë³µë‘ê°œ", "Lv. 9", " 800ë§Œ ê³¨ë“œ", 11,  0 )); // 11ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.11", "  36ë§Œ ì‹ëŸ‰",  3,  0 )); //  3ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.12", "  63ë§Œ ì‹ëŸ‰",  4,  0 )); //  4ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.13", "  90ë§Œ ì‹ëŸ‰",  5,  0 )); //  5ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
+				taskList.push(new Array(type, "ìºëŸ¬ë°´  ", "Lv.14", " 126ë§Œ ì‹ëŸ‰",  6,  0 )); //  6ì¼
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -114,21 +114,21 @@
 			function setTask17() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "±¹¹Î7";
-				taskMap.title = "1-7. ±¹¹Î (1¸í)";
+				var type = "êµ­ë¯¼7";
+				taskMap.title = "1-7. êµ­ë¯¼ (1ëª…)";
 				taskMap.startDate = "2019-11-28 22:01:00";
-				taskList.push(new Array(type, "À¯ÀÎÇÔÁ¤", "Lv. 3", " 500¸¸ °ñµå", 10,  0 )); // 10ÀÏ
-				taskList.push(new Array(type, "Å¬·¹¸ğ¾î", "Lv. 2", " 450¸¸ °ñµå", 10,  0 )); // 10ÀÏ
-				taskList.push(new Array(type, "Å¬·¹¸ğ¾î", "Lv. 2", " 450¸¸ °ñµå", 10,  0 )); // 10ÀÏ
-				taskList.push(new Array(type, "½ÅÈ£Åº  ", "Lv. 2", " 5.5¸¸ ¼®À¯", 11,  0 )); // 11ÀÏ
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
-				taskList.push(new Array(type, "°¡½ÃÇÔÁ¤", "Lv.11", " 550¸¸ °ñµå", 12,  0 )); // 12ÀÏ (¿ìÁÖ)
+				taskList.push(new Array(type, "ìœ ì¸í•¨ì •", "Lv. 3", " 500ë§Œ ê³¨ë“œ", 10,  0 )); // 10ì¼
+				taskList.push(new Array(type, "í´ë ˆëª¨ì–´", "Lv. 2", " 450ë§Œ ê³¨ë“œ", 10,  0 )); // 10ì¼
+				taskList.push(new Array(type, "í´ë ˆëª¨ì–´", "Lv. 2", " 450ë§Œ ê³¨ë“œ", 10,  0 )); // 10ì¼
+				taskList.push(new Array(type, "ì‹ í˜¸íƒ„  ", "Lv. 2", " 5.5ë§Œ ì„ìœ ", 11,  0 )); // 11ì¼
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
+				taskList.push(new Array(type, "ê°€ì‹œí•¨ì •", "Lv.11", " 550ë§Œ ê³¨ë“œ", 12,  0 )); // 12ì¼ (ìš°ì£¼)
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -136,12 +136,12 @@
 			function setTask21() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "¹«±â1";
-				taskMap.title = "2-1. ¹«±â°í ¿¬±¸";
+				var type = "ë¬´ê¸°1";
+				taskMap.title = "2-1. ë¬´ê¸°ê³  ì—°êµ¬";
 				taskMap.startDate = "2019-12-01 12:06:00";
-				taskList.push(new Array(type, "Æø°İ±â  ", "Lv. 4", "  20¸¸ ¼®À¯",  8,  2 ));
-				taskList.push(new Array(type, "Æø°İ±â  ", "Lv. 5", "  20¸¸ ¼®À¯",  8,  2 ));
-				taskList.push(new Array(type, "Æø°İ±â  ", "Lv. 6", "  20¸¸ ¼®À¯",  8,  2 ));
+				taskList.push(new Array(type, "í­ê²©ê¸°  ", "Lv. 4", "  20ë§Œ ì„ìœ ",  8,  2 ));
+				taskList.push(new Array(type, "í­ê²©ê¸°  ", "Lv. 5", "  20ë§Œ ì„ìœ ",  8,  2 ));
+				taskList.push(new Array(type, "í­ê²©ê¸°  ", "Lv. 6", "  20ë§Œ ì„ìœ ",  8,  2 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -149,12 +149,12 @@
 			function setTask22() {
 				var taskList = new Array();
 				var taskMap = new Object();
-				var type = "¹«±â2";
-				taskMap.title = "2-2. ¹«±â°í ¿¬±¸";
+				var type = "ë¬´ê¸°2";
+				taskMap.title = "2-2. ë¬´ê¸°ê³  ì—°êµ¬";
 				taskMap.startDate = "2019-12-03 23:40:00";
-				taskList.push(new Array(type, "¿¡ÀÌÇÇ¾¾", "Lv. 6", "21.5¸¸ ¼®À¯", 16,  4 ));
-				taskList.push(new Array(type, "¿¥¾Ë¿¤  ", "Lv. 3", "21.5¸¸ ¼®À¯", 13,  7 ));
-				taskList.push(new Array(type, "¿¥¾Ë¿¤  ", "Lv. 4", "21.5¸¸ ¼®À¯", 14,  6 ));
+				taskList.push(new Array(type, "ì—ì´í”¼ì”¨", "Lv. 6", "21.5ë§Œ ì„ìœ ", 16,  4 ));
+				taskList.push(new Array(type, "ì— ì•Œì—˜  ", "Lv. 3", "21.5ë§Œ ì„ìœ ", 13,  7 ));
+				taskList.push(new Array(type, "ì— ì•Œì—˜  ", "Lv. 4", "21.5ë§Œ ì„ìœ ", 14,  6 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -186,9 +186,9 @@
 			<div id="header">
 				<div id="banner"></div>
 				<div id="memo">
-					<div><b>======= [ ¸Ş¸ğ ] =======</b></div><br>
-					<div>1. ±¹¹Î3, ±¹¹Î4 : ÀÎ±¸¼ö 4 ¿î¿µ</div>
-					<div>2. ±¹¹Î5, ±¹¹Î6 : ÀÎ±¸¼ö 4 ¿î¿µ</div>
+					<div><b>======= [ ë©”ëª¨ ] =======</b></div><br>
+					<div>1. êµ­ë¯¼3, êµ­ë¯¼4 : ì¸êµ¬ìˆ˜ 4 ìš´ì˜</div>
+					<div>2. êµ­ë¯¼5, êµ­ë¯¼6 : ì¸êµ¬ìˆ˜ 4 ìš´ì˜</div>
 				</div>
 			</div>
 			<div id="main">
