--- a/task1.html
+++ b/task1.html
@@ -123,9 +123,9 @@
 				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6)); // 우주
-				taskList.push(new Array(type, "엠알엘  ", "Lv. 5", "  24만 석유", 16,  0)); // 디지털 (예상)
-				taskList.push(new Array(type, "배반    ", "Lv. 3", "1000만 식량", 10, 11)); // 10일 11시
-				taskList.push(new Array(type, "유인    ", "Lv. 3", "1000만 식량", 10, 11)); // 10일 11시
+				taskList.push(new Array(type, "엠알엘  ", "Lv. 5", "  24만 석유", 14,  6)); // 디지털 (예상)
+				taskList.push(new Array(type, "배반    ", "Lv. 3", "1000만 식량", 10, 11));
+				taskList.push(new Array(type, "유인    ", "Lv. 3", "1000만 식량", 10, 11));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -143,13 +143,13 @@
 				taskList.push(new Array(type, "선진전투", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진전투", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진전투", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "바주카  ", "Lv. 9", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "게릴라  ", "Lv.11", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "중전차  ", "Lv.10", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "개틀링  ", "Lv.12", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 18,  0)); // 디지털
-				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 18,  0)); // 디지털
+				taskList.push(new Array(type, "바주카  ", "Lv. 9", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "게릴라  ", "Lv.11", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "중전차  ", "Lv.10", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "개틀링  ", "Lv.12", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 16,  4)); // 디지털
 				taskList.push(new Array(type, "우주포병", "Lv. 1", "1500만 식량", 13,  8)); // 우주
 				taskList.push(new Array(type, "우주야전", "Lv. 1", "1500만 식량", 13,  8)); // 우주
 				taskList.push(new Array(type, "우주마차", "Lv. 1", "1500만 식량", 13,  8)); // 우주
