--- a/task2.html
+++ b/task2.html
@@ -139,6 +139,11 @@
 				taskMap.startDate = "2019-12-09 10:29:00";
 				taskList.push(new Array(type, "폭격기  ", "Lv. 5", "  18만 석유",  8,  2 ));
 				taskList.push(new Array(type, "폭격기  ", "Lv. 6", "  18만 석유",  8,  2 ));
+				taskList.push(new Array(type, "개틀링건", "Lv. 7", "14.5만 석유", 11, 10 ));
+				taskList.push(new Array(type, "개틀링건", "Lv. 8", "  20만 석유", 12,  9 )); // 예상
+				taskList.push(new Array(type, "개틀링건", "Lv. 9", "  23만 석유", 13, 10 )); // 예상
+				taskList.push(new Array(type, "개틀링건", "Lv.10", "  24만 석유", 14,  8 )); // 예상
+				taskList.push(new Array(type, "개틀링건", "Lv.11", "  25만 석유", 16,  4 )); // 예상
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -152,6 +157,10 @@
 				taskList.push(new Array(type, "에이피씨", "Lv. 6", "21.5만 석유", 16,  4 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 3", "21.5만 석유", 13,  7 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6 ));
+				taskList.push(new Array(type, "무장차량", "Lv. 4", "  20만 석유", 12,  9 ));
+				taskList.push(new Array(type, "무장차량", "Lv. 5", "  23만 석유", 13, 10 )); // 예상
+				taskList.push(new Array(type, "무장차량", "Lv. 6", "  24만 석유", 14,  8 )); // 예상
+				taskList.push(new Array(type, "무장차량", "Lv. 7", "  25만 석유", 16,  4 )); // 예상
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
