--- a/task2.html
+++ b/task2.html
@@ -11,13 +11,9 @@
 				var type = "국민1";
 				taskMap.title = "1-1. 국민 (4명)";
 				taskMap.startDate = "2019-12-01 23:47:00";
-				taskList.push(new Array(type, "부두    ", "Lv.10", " 910만 골드", 11,  0 )); // 11일
-				taskList.push(new Array(type, "농장두개", "Lv.12", " 126만 골드",  4,  0 )); //  4일
-				taskList.push(new Array(type, "농장두개", "Lv.12", " 126만 골드",  4,  0 )); //  4일
-				taskList.push(new Array(type, "농장두개", "Lv.13", " 180만 골드",  5,  0 )); //  5일
-				taskList.push(new Array(type, "농장두개", "Lv.13", " 180만 골드",  5,  0 )); //  5일
-				taskList.push(new Array(type, "농장두개", "Lv.14", " 252만 골드",  6,  0 )); //  6일
-				taskList.push(new Array(type, "농장두개", "Lv.14", " 252만 골드",  6,  0 )); //  6일
+				taskList.push(new Array(type, "부두    ", "Lv.10", " 910만 골드", 11,  0 ));
+				taskList.push(new Array(type, "비행장  ", "Lv. 7", "  27만 석유", 16, 12 ));
+				taskList.push(new Array(type, "비행장  ", "Lv. 7", "  27만 석유", 16, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -28,13 +24,11 @@
 				var type = "국민2";
 				taskMap.title = "1-2. 국민 (4명)";
 				taskMap.startDate = "2019-12-10 19:22:00";
-				taskList.push(new Array(type, "뮤지엄  ", "Lv. 6", " 650만 식량",  7,  0 )); //  7일
-				taskList.push(new Array(type, "농장두개", "Lv.12", " 126만 골드",  4,  0 )); //  4일
-				taskList.push(new Array(type, "농장두개", "Lv.12", " 126만 골드",  4,  0 )); //  4일
-				taskList.push(new Array(type, "농장두개", "Lv.13", " 180만 골드",  5,  0 )); //  5일
-				taskList.push(new Array(type, "농장두개", "Lv.13", " 180만 골드",  5,  0 )); //  5일
-				taskList.push(new Array(type, "농장두개", "Lv.14", " 252만 골드",  6,  0 )); //  6일
-				taskList.push(new Array(type, "농장두개", "Lv.14", " 252만 골드",  6,  0 )); //  6일
+				taskList.push(new Array(type, "뮤지엄  ", "Lv. 6", " 650만 식량",  7,  0 ));
+				taskList.push(new Array(type, "공장    ", "Lv.12", "27.5만 석유", 16, 12 ));
+				taskList.push(new Array(type, "공장    ", "Lv.10", "26.5만 석유", 15, 12 ));
+				taskList.push(new Array(type, "공장    ", "Lv.11", "  27만 석유", 16,  0 ));
+				taskList.push(new Array(type, "공장    ", "Lv.12", "27.5만 석유", 16, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -95,15 +89,15 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민6";
-				taskMap.title = "1-6. 국민 (2명)";
-				taskMap.startDate = "2019-12-09 10:24:00";
-				taskList.push(new Array(type, "캐러밴  ", "Lv.11", "  36만 식량",  3,  0 )); //  3일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
+				taskMap.title = "1-6. 국민 (4명)";
+				taskMap.startDate = "2019-12-12 09:08:00";
+				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
