--- a/task2.html
+++ b/task2.html
@@ -39,13 +39,6 @@
 				taskMap.title = "1-3. 국민 (2명)";
 				taskMap.startDate = "2019-12-10 09:59:00";
 				taskList.push(new Array(type, "캐러밴  ", "Lv.11", "  36만 식량",  3,  0 )); //  3일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.11", "  36만 식량",  3,  0 )); //  3일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -71,15 +64,13 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민5";
-				taskMap.title = "1-5. 국민 (2명)";
+				taskMap.title = "1-5. 국민 (4명)";
 				taskMap.startDate = "2019-12-02 12:28:00";
 				taskList.push(new Array(type, "매복두개", "Lv. 9", " 800만 골드", 11,  0 ));
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
