--- a/task2.html
+++ b/task2.html
@@ -13,6 +13,8 @@
 				taskMap.startDate = "2019-12-12 23:19:00";
 				taskList.push(new Array(type, "비행장  ", "Lv. 7", "  27만 석유", 16, 12 ));
 				taskList.push(new Array(type, "비행장  ", "Lv. 7", "  27만 석유", 16, 12 ));
+				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
+				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -39,6 +41,7 @@
 				taskMap.title = "1-3. 국민 (4명)";
 				taskMap.startDate = "2019-12-02 12:28:00";
 				taskList.push(new Array(type, "매복두개", "Lv. 9", " 800만 골드", 11,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
@@ -55,11 +58,11 @@
 				taskMap.startDate = "2019-12-12 09:08:00";
 				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
 				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
-				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
 				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
 				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
 				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
 				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -70,13 +73,12 @@
 				var type = "국민5";
 				taskMap.title = "1-5. 국민 (2명)";
 				taskMap.startDate = "2019-12-01 23:17:00";
-				taskList.push(new Array(type, "지뢰두개", "Lv.14", "1180만 골드", 13,  0 )); // 13일 (우주)
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.12", "  63만 식량",  4,  0 )); //  4일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.13", "  90만 식량",  5,  0 )); //  5일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
-				taskList.push(new Array(type, "캐러밴  ", "Lv.14", " 126만 식량",  6,  0 )); //  6일
+				taskList.push(new Array(type, "지뢰두개", "Lv.14", "1180만 골드", 13,  0 ));
+				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
