--- a/task2.html
+++ b/task2.html
@@ -42,10 +42,12 @@
 				taskMap.startDate = "2019-12-02 12:28:00";
 				taskList.push(new Array(type, "매복두개", "Lv. 9", " 800만 골드", 11,  0 ));
 				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -57,12 +59,10 @@
 				taskMap.title = "1-4. 국민 (4명)";
 				taskMap.startDate = "2019-12-12 09:08:00";
 				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -124,6 +124,12 @@
 				taskList.push(new Array(type, "폭격기  ", "Lv. 5", "  18만 석유",  8,  2 ));
 				taskList.push(new Array(type, "폭격기  ", "Lv. 6", "  18만 석유",  8,  2 ));
 				taskList.push(new Array(type, "개틀링건", "Lv. 7", "14.5만 석유", 11, 10 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 1", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 2", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 3", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 4", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 5", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진수송", "Lv. 6", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "개틀링건", "Lv. 8", "  20만 석유", 12,  9 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv. 9", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.10", "  24만 석유", 14,  8 )); // 예상
@@ -140,6 +146,12 @@
 				taskMap.startDate = "2019-12-03 23:40:00";
 				taskList.push(new Array(type, "에이피씨", "Lv. 6", "21.5만 석유", 16,  4 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 3", "21.5만 석유", 13,  7 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 1", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 2", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 3", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 4", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 5", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "선진전투", "Lv. 6", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6 ));
 				taskList.push(new Array(type, "무장차량", "Lv. 4", "  20만 석유", 12,  9 ));
 				taskList.push(new Array(type, "무장차량", "Lv. 5", "  23만 석유", 13, 10 )); // 예상
