--- a/task2.html
+++ b/task2.html
@@ -212,6 +212,8 @@
 					setTask17();
 					setTask21();
 					setTask22();
+					setTask31();
+					setTask32();
 					setDominations();
 				} catch (e){
 					alert(e);
