--- a/task2.html
+++ b/task2.html
@@ -130,6 +130,17 @@
 				taskList.push(new Array(type, "선진수송", "Lv. 4", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 5", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 6", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "정찰기  ", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 1", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "개틀링건", "Lv. 8", "  20만 석유", 12,  9 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv. 9", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.10", "  24만 석유", 14,  8 )); // 예상
