--- a/task2.html
+++ b/task2.html
@@ -145,6 +145,7 @@
 				taskList.push(new Array(type, "개틀링건", "Lv. 9", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.10", "  24만 석유", 14,  8 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.11", "  25만 석유", 16,  4 )); // 예상
+				taskList.push(new Array(type, "개틀링건", "Lv.12", "  25만 석유", 16,  4)); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -163,11 +164,18 @@
 				taskList.push(new Array(type, "선진전투", "Lv. 4", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 5", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 6", "  18만 석유",  8, 14 ));
+				taskList.push(new Array(type, "바주카  ", "Lv. 9", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "게릴라  ", "Lv.11", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "중전차  ", "Lv.10", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 16,  4)); // 디지털
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6 ));
+				taskList.push(new Array(type, "엠알엘  ", "Lv. 5", "  24만 석유", 14,  6 ));
 				taskList.push(new Array(type, "무장차량", "Lv. 4", "  20만 석유", 12,  9 ));
 				taskList.push(new Array(type, "무장차량", "Lv. 5", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "무장차량", "Lv. 6", "  24만 석유", 14,  8 )); // 예상
 				taskList.push(new Array(type, "무장차량", "Lv. 7", "  25만 석유", 16,  4 )); // 예상
+				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 16,  4)); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
