--- a/task2.html
+++ b/task2.html
@@ -39,15 +39,12 @@
 				var taskMap = new Object();
 				var type = "국민3";
 				taskMap.title = "1-3. 국민 (4명)";
-				taskMap.startDate = "2019-12-02 12:28:00";
-				taskList.push(new Array(type, "매복두개", "Lv. 9", " 800만 골드", 11,  0 ));
-				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
-				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
-				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
+				taskMap.startDate = "2019-12-12 09:08:00";
+				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -57,12 +54,18 @@
 				var taskMap = new Object();
 				var type = "국민4";
 				taskMap.title = "1-4. 국민 (4명)";
-				taskMap.startDate = "2019-12-12 09:08:00";
-				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
-				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskMap.startDate = "2019-12-02 12:28:00";
+				taskList.push(new Array(type, "매복두개", "Lv. 9", " 800만 골드", 11,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.15", " 540만 골드",  9,  0 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "식량저장", "Lv.16", " 765만 골드", 10, 12 ));
+				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
+				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
+				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
+				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -79,6 +82,8 @@
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 ));
+				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -101,16 +106,6 @@
 				taskMap.title = "1-7. 국민 (1명)";
 				taskMap.startDate = "2019-12-08 14:40:00";
 				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 )); // 10일
-				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 )); // 10일
-				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0 )); // 11일
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
-				taskList.push(new Array(type, "가시함정", "Lv.11", " 550만 골드", 12,  0 )); // 12일 (우주)
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
