--- a/task2.html
+++ b/task2.html
@@ -118,7 +118,6 @@
 				taskMap.startDate = "2019-12-09 10:29:00";
 				taskList.push(new Array(type, "폭격기  ", "Lv. 5", "  18만 석유",  8,  2 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 3", "21.5만 석유", 13,  7 ));
-				taskList.push(new Array(type, "개틀링건", "Lv. 7", "14.5만 석유", 11, 10 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 1", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 2", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 3", "  18만 석유",  8, 14 ));
@@ -130,6 +129,7 @@
 				taskList.push(new Array(type, "정찰기  ", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "정찰기  ", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "정찰기  ", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "우주폭격", "Lv. 6", "  18만 석유",  8,  2 ));
 				taskList.push(new Array(type, "선진폭격", "Lv. 1", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진폭격", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진폭격", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
@@ -152,7 +152,7 @@
 				taskMap.title = "2-2. 무기고 연구";
 				taskMap.startDate = "2019-12-03 23:40:00";
 				taskList.push(new Array(type, "에이피씨", "Lv. 6", "21.5만 석유", 16,  4 ));
-				taskList.push(new Array(type, "폭격기  ", "Lv. 6", "  18만 석유",  8,  2 ));
+				taskList.push(new Array(type, "개틀링건", "Lv. 7", "14.5만 석유", 11, 10 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 1", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 2", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 3", "  18만 석유",  8, 14 ));
