--- a/task2.html
+++ b/task2.html
@@ -15,6 +15,8 @@
 				taskList.push(new Array(type, "비행장  ", "Lv. 7", "  27만 석유", 16, 12 ));
 				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
 				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
+				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
+				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -30,6 +32,7 @@
 				taskList.push(new Array(type, "공장    ", "Lv.10", "26.5만 석유", 15, 12 ));
 				taskList.push(new Array(type, "공장    ", "Lv.11", "  27만 석유", 16,  0 ));
 				taskList.push(new Array(type, "공장    ", "Lv.12", "27.5만 석유", 16, 12 ));
+				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
