--- a/task2.html
+++ b/task2.html
@@ -85,6 +85,7 @@
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
+				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12));
 				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 ));
 				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0 ));
 				taskMap.taskList = taskList;
