--- a/task1.html
+++ b/task1.html
@@ -156,8 +156,7 @@
 				var taskMap = new Object();
 				var type = "도서1";
 				taskMap.title = "3-1. 도서관 연구";
-				taskMap.startDate = "2019-12-15 18:02:00";
-				taskList.push(new Array(type, "전술방어", "Lv. 2", "  10만 석유",  5,  3));
+				taskMap.startDate = "2019-12-20 15:18:00";
 				taskList.push(new Array(type, "전술방어", "Lv. 3", "  14만 석유",  8, 12)); // 미확인
 				taskList.push(new Array(type, "경제번영", "Lv. 4", "15.2만 석유", 10,  5)); // 미확인
 				taskList.push(new Array(type, "경제번영", "Lv. 5", "  20만 석유", 14, 11)); // 미확인
@@ -172,11 +171,10 @@
 				var taskMap = new Object();
 				var type = "도서2";
 				taskMap.title = "3-2. 도서관 연구";
-				taskMap.startDate = "2019-12-15 18:02:00";
-				taskList.push(new Array(type, "정찰항공", "Lv. 2", "  10만 석유",  5,  3));
+				taskMap.startDate = "2019-12-20 15:30:00";
 				taskList.push(new Array(type, "정찰항공", "Lv. 3", "  14만 석유",  8, 12)); // 미확인
-				taskList.push(new Array(type, "울타리  ", "Lv. 4", "15.2만 석유", 10,  5)); // 미확인
-				taskList.push(new Array(type, "울타리  ", "Lv. 5", "  20만 석유", 14, 11)); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 4", "1500만 골드", 10,  5)); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 5", "1600만 골드", 14, 11)); // 미확인
 				taskList.push(new Array(type, "정찰항공", "Lv. 4", "  18만 석유", 10,  5)); // 미확인
 				taskList.push(new Array(type, "정찰항공", "Lv. 5", "  20만 석유", 14, 11)); // 미확인
 				taskMap.taskList = taskList;
