--- a/task2.html
+++ b/task2.html
@@ -193,8 +193,8 @@
 				taskList.push(new Array(type, "울타리  ", "Lv. 1", "1050만 골드",  1, 10)); // 미확인
 				taskList.push(new Array(type, "울타리  ", "Lv. 2", "1200만 골드",  5,  3));
 				taskList.push(new Array(type, "울타리  ", "Lv. 3", "1350만 골드",  8, 12));
-				taskList.push(new Array(type, "울타리  ", "Lv. 4", "15.2만 석유", 10,  5)); // 미확인
-				taskList.push(new Array(type, "울타리  ", "Lv. 5", "  20만 석유", 14, 11)); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 4", "1500만 골드", 10,  5)); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 5", "1600만 골드", 14, 11)); // 미확인
 				taskList.push(new Array(type, "정찰항공", "Lv. 2", "  10만 석유",  5,  3));
 				taskList.push(new Array(type, "정찰항공", "Lv. 3", "  14만 석유",  8, 12)); // 미확인
 				taskList.push(new Array(type, "정찰항공", "Lv. 4", "  18만 석유", 10,  5)); // 미확인
