--- a/task2.html
+++ b/task2.html
@@ -41,8 +41,7 @@
 				var taskMap = new Object();
 				var type = "국민3";
 				taskMap.title = "1-3. 국민 (4명)";
-				taskMap.startDate = "2019-12-12 09:08:00";
-				taskList.push(new Array(type, "도서관  ", "Lv.14", "1600만 골드", 14, 12 ));
+				taskMap.startDate = "2019-12-26 10:08:00";
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
@@ -156,8 +155,8 @@
 				var taskMap = new Object();
 				var type = "도서1";
 				taskMap.title = "3-1. 도서관 연구";
-				taskMap.startDate = "2019-12-26 21:08:00";
-				taskList.push(new Array(type, "전술방어", "Lv. 1", "   5만 석유",  1, 10)); // 미확인
+				taskMap.startDate = "2019-12-26 10:05:00";
+				taskList.push(new Array(type, "전술방어", "Lv. 1", " 6.7만 석유",  1, 17));
 				taskList.push(new Array(type, "경제번영", "Lv. 1", "1050만 식량",  1, 10)); // 미확인
 				taskList.push(new Array(type, "경제번영", "Lv. 2", "1250만 식량",  5,  3));
 				taskList.push(new Array(type, "경제번영", "Lv. 3", "1350만 식량",  8, 12));
@@ -176,8 +175,8 @@
 				var taskMap = new Object();
 				var type = "도서2";
 				taskMap.title = "3-2. 도서관 연구";
-				taskMap.startDate = "2019-12-26 21:08:00";
-				taskList.push(new Array(type, "정찰항공", "Lv. 1", "   5만 석유",  1, 10)); // 미확인
+				taskMap.startDate = "2019-12-26 10:05:00";
+				taskList.push(new Array(type, "정찰항공", "Lv. 1", " 6.7만 석유",  1, 17));
 				taskList.push(new Array(type, "울타리  ", "Lv. 1", "1050만 골드",  1, 10)); // 미확인
 				taskList.push(new Array(type, "울타리  ", "Lv. 2", "1200만 골드",  5,  3));
 				taskList.push(new Array(type, "울타리  ", "Lv. 3", "1350만 골드",  8, 12));
