--- a/task1.html
+++ b/task1.html
@@ -80,9 +80,9 @@
 				taskMap.title = "1-5. 국민 (1명)";
 				taskMap.startDate = "2020-01-01 19:59:00";
 				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12)); // 디지털
+				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12)); // 디지털
 				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0)); 
-				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0)); 
-				taskList.push(new Array(type, "유인함정", "Lv. 3", " 432만 골드", 10,  0));
+				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0));
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
