--- a/task2.html
+++ b/task2.html
@@ -12,7 +12,8 @@
 				taskMap.title = "1-1. 국민 (4명)";
 				taskMap.startDate = "2020-01-29 02:02:00";
 				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
-				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12));
+				taskList.push(new Array(type, "저격타워", "Lv. 2", " 400만 골드",  5,  0 ));
+				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -25,7 +26,7 @@
 				taskMap.startDate = "2020-01-16 16:58:00";
 				taskList.push(new Array(type, "공장    ", "Lv.11", "  27만 석유", 16, 12 ));
 				taskList.push(new Array(type, "공장    ", "Lv.12", "27.5만 석유", 16, 12 ));
-				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12));
+				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -65,7 +66,7 @@
 				taskMap.startDate = "2020-01-24 01:17:00";
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
 				taskList.push(new Array(type, "미샬포대", "Lv. 9", " 650만 골드", 13, 12 ));
-				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12));
+				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12 ));
 				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 ));
 				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0 ));
 				taskMap.taskList = taskList;
@@ -81,24 +82,24 @@
 				taskList.push(new Array(type, "선진수송", "Lv. 4", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 5", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진수송", "Lv. 6", "  18만 석유",  8, 14 ));
-				taskList.push(new Array(type, "정찰기  ", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "정찰기  ", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "정찰기  ", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "정찰기  ", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "정찰기  ", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 2", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 3", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 4", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 5", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "정찰기  ", "Lv. 6", "  18만 석유",  8, 14 )); // 디지털
 				taskList.push(new Array(type, "우주폭격", "Lv. 6", "  18만 석유",  8,  2 ));
-				taskList.push(new Array(type, "선진폭격", "Lv. 1", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 1", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 2", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 3", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 4", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14 )); // 디지털
+				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14 )); // 디지털
 				taskList.push(new Array(type, "개틀링건", "Lv. 7", "14.5만 석유", 11, 10 ));
 				taskList.push(new Array(type, "개틀링건", "Lv. 8", "  20만 석유", 12,  9 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv. 9", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.10", "  24만 석유", 14,  8 )); // 예상
 				taskList.push(new Array(type, "개틀링건", "Lv.11", "  25만 석유", 16,  4 )); // 예상
-				taskList.push(new Array(type, "개틀링건", "Lv.12", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "개틀링건", "Lv.12", "  25만 석유", 16,  4 )); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -112,17 +113,17 @@
 				taskList.push(new Array(type, "선진전투", "Lv. 4", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 5", "  18만 석유",  8, 14 ));
 				taskList.push(new Array(type, "선진전투", "Lv. 6", "  18만 석유",  8, 14 ));
-				taskList.push(new Array(type, "바주카  ", "Lv. 9", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "게릴라  ", "Lv.11", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "중전차  ", "Lv.10", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "바주카  ", "Lv. 9", "  25만 석유", 16,  4 )); // 디지털
+				taskList.push(new Array(type, "게릴라  ", "Lv.11", "  25만 석유", 16,  4 )); // 디지털
+				taskList.push(new Array(type, "중전차  ", "Lv.10", "  25만 석유", 16,  4 )); // 디지털
+				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 16,  4 )); // 디지털
+				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 16,  4 )); // 디지털
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6 ));
 				taskList.push(new Array(type, "엠알엘  ", "Lv. 5", "  24만 석유", 14,  6 ));
 				taskList.push(new Array(type, "무장차량", "Lv. 5", "  23만 석유", 13, 10 )); // 예상
 				taskList.push(new Array(type, "무장차량", "Lv. 6", "  24만 석유", 14,  8 )); // 예상
 				taskList.push(new Array(type, "무장차량", "Lv. 7", "  25만 석유", 16,  4 )); // 예상
-				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 16,  4)); // 디지털
+				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 16,  4 )); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -133,10 +134,10 @@
 				var type = "도서1";
 				taskMap.title = "3-1. 도서관 연구";
 				taskMap.startDate = "2020-01-27 22:49:00";
-				taskList.push(new Array(type, "경제번영", "Lv. 3", "1350만 식량",  8, 13));
-				taskList.push(new Array(type, "경제번영", "Lv. 4", "15.2만 석유", 10,  5)); // 미확인
-				taskList.push(new Array(type, "경제번영", "Lv. 5", "  25만 석유", 14, 11)); // 미확인
-				taskList.push(new Array(type, "전술방어", "Lv. 5", "  20만 석유", 14, 11)); // 미확인
+				taskList.push(new Array(type, "경제번영", "Lv. 3", "1350만 식량",  8, 13 ));
+				taskList.push(new Array(type, "경제번영", "Lv. 4", "15.2만 석유", 10,  5 )); // 미확인
+				taskList.push(new Array(type, "경제번영", "Lv. 5", "  25만 석유", 14, 11 )); // 미확인
+				taskList.push(new Array(type, "전술방어", "Lv. 5", "  20만 석유", 14, 11 )); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -147,10 +148,10 @@
 				var type = "도서2";
 				taskMap.title = "3-2. 도서관 연구";
 				taskMap.startDate = "2020-01-29 02:00:00";
-				taskList.push(new Array(type, "울타리  ", "Lv. 3", "1350만 골드",  8, 13));
-				taskList.push(new Array(type, "울타리  ", "Lv. 4", "1500만 골드", 10,  5)); // 미확인
-				taskList.push(new Array(type, "울타리  ", "Lv. 5", "1600만 골드", 14, 11)); // 미확인
-				taskList.push(new Array(type, "정찰항공", "Lv. 5", "  25만 석유", 14, 11)); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 3", "1350만 골드",  8, 13 ));
+				taskList.push(new Array(type, "울타리  ", "Lv. 4", "1500만 골드", 10,  5 )); // 미확인
+				taskList.push(new Array(type, "울타리  ", "Lv. 5", "1600만 골드", 14, 11 )); // 미확인
+				taskList.push(new Array(type, "정찰항공", "Lv. 5", "  25만 석유", 14, 11 )); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
