--- a/task2.html
+++ b/task2.html
@@ -14,6 +14,7 @@
 				taskList.push(new Array(type, "벙커    ", "Lv. 7", "  27만 석유", 15, 12 ));
 				taskList.push(new Array(type, "저격타워", "Lv. 2", " 400만 골드",  5,  0 ));
 				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12 ));
+				taskList.push(new Array(type, "미샬격납", "Lv. 8", "  24만 석유", 15, 12 )); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
