--- a/task1.html
+++ b/task1.html
@@ -71,8 +71,9 @@
 				var taskMap = new Object();
 				var type = "국민5";
 				taskMap.title = "1-5. 국민 (1명)";
-				taskMap.startDate = "2020-01-21 17:39:00";
-				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0)); 
+				taskMap.startDate = "2020-02-01 13:44:00";
+				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
+				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
 				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
