--- a/task1.html
+++ b/task1.html
@@ -15,6 +15,8 @@
 				taskList.push(new Array(type, "미샬격납", "Lv. 8", "  24만 석유", 15, 12)); // 디지털
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -62,6 +64,8 @@
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12)); // 디지털
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
