--- a/task1.html
+++ b/task1.html
@@ -78,6 +78,7 @@
 				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
 				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
 				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0));
+				taskList.push(new Array(type, "유인함정", "Lv. 3", " 450만 골드", 10,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
