--- a/task1.html
+++ b/task1.html
@@ -153,10 +153,11 @@
 				<div id="banner"></div>
 				<div id="memo">
 					<div><b>======= [ 메모 ] =======</b></div><br>
-					<div>1. 국민1 : 인구수 6 운영</div>
-					<div>2. 국민2~5 : 인구수 3 운영</div>
-					<br>
-					<div>3. 무기고 업그레이드 보류</div>
+					<div>1. 전차격납</div>
+					<div>2. 방공시설</div>
+					<div>3. 타워</div>
+					<div>4. 함정</div>
+					<div>5. 무기고 즉시 완료</div>
 				</div>
 			</div>
 			<div id="main">
