--- a/task2.html
+++ b/task2.html
@@ -47,11 +47,12 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민4";
-				taskMap.title = "1-4. 국민 (4명)";
+				taskMap.title = "1-4. 국민 (5명)";
 				taskMap.startDate = "2020-02-03 19:27:00";
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
+				taskList.push(new Array(type, "전차격납", "Lv.11", "1250만 골드", 14,  0 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -60,13 +61,11 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민5";
-				taskMap.title = "1-5. 국민 (2명)";
+				taskMap.title = "1-5. 국민 (1명)";
 				taskMap.startDate = "2020-02-06 20:49:00";
 				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12 ));
 				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12 ));
 				taskList.push(new Array(type, "무장함정", "Lv. 1", "   7만 석유", 12, 12 ));
-				taskList.push(new Array(type, "클레모어", "Lv. 2", " 450만 골드", 10,  0 ));
-				taskList.push(new Array(type, "신호탄  ", "Lv. 2", " 5.5만 석유", 11,  0 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
