--- a/task2.html
+++ b/task2.html
@@ -15,6 +15,13 @@
 				taskList.push(new Array(type, "저격타워", "Lv. 2", " 400만 골드",  5,  0 ));
 				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12 ));
 				taskList.push(new Array(type, "미샬격납", "Lv. 8", "  24만 석유", 15, 12 )); // 디지털
+				taskList.push(new Array(type, "전차격납", "Lv.11", "1250만 골드", 14,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.12", "1380만 골드", 15,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.12", "1380만 골드", 15,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -53,6 +60,12 @@
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
 				taskList.push(new Array(type, "훈련소  ", "Lv.12", "1500만 식량", 13, 12 ));
 				taskList.push(new Array(type, "전차격납", "Lv.11", "1250만 골드", 14,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.12", "1380만 골드", 15,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.12", "1380만 골드", 15,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0 ));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0 ));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
