--- a/task2.html
+++ b/task2.html
@@ -34,6 +34,12 @@
 				taskMap.startDate = "2020-02-02 04:06:00";
 				taskList.push(new Array(type, "공장    ", "Lv.12", "27.5만 석유", 16, 12 ));
 				taskList.push(new Array(type, "요새"    , "Lv. 9", "  14만 석유", 15, 12 ));
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -46,6 +52,12 @@
 				taskMap.startDate = "2020-02-06 00:44:00";
 				taskList.push(new Array(type, "용병캠프", "Lv.13", "1700만 식량", 15, 12 ));
 				taskList.push(new Array(type, "골드저장", "Lv.16", " 765만 식량", 10, 12 ));
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "대전차포", "Lv.10", "1600만 골드", 16, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
