--- a/task2.html
+++ b/task2.html
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<a id="banner" class="navbar-brand" href="#"><b>도미네이션즈 일정 2</b></a>
+					<a id="banner" class="navbar-brand" href="javascript:reload();"><b>도미네이션즈 일정 2</b></a>
 				</div>
 			</div>
 		</nav>
@@ -23,9 +23,10 @@
 		<div class="hidden-xs" style="width:100%;">
 			<div id="task1" class="task"></div>
 			<div id="task2" class="task"></div>
-			<div id="task3" class="task" style="width:300px;"></div>
+			<div id="task3" class="task" style="width:15%;"></div>
 		</div>
 		
+		<div class="clear20"></div>
 		<div class="container hidden-sm hidden-md hidden-lg">
 			<div class="row">
 				<div class="col-xs-12">
